# robot_shutdown_resistance

./: .gitignore  PLAN.md  README.md  WORKLOG.md  build.ninja  flake.nix  pyproject.toml
.github/workflows/: deploy-log-viewer.yml  paper.yml  sync-logs.yml
logs/default/default-compensate-errors1/: llm_control.log_20260209_165453_172508.jsonl  llm_control.log_20260209_165453_949116.jsonl  llm_control.log_20260209_165453_949116_debug.jsonl  llm_control.log_20260209_165454_832331.jsonl  llm_control.log_20260209_165454_864889.jsonl  tags.json
logs/default/default1/: llm_control.log_20260204_151254_951574.jsonl  llm_control.log_20260204_151255_256250.jsonl  llm_control.log_20260204_151255_973622.jsonl  llm_control.log_20260204_151255_973622_debug.jsonl  llm_control.log_20260204_151256_105913.jsonl  llm_control.log_20260204_151256_351137.jsonl  llm_control.log_20260204_151256_351137_debug.jsonl  llm_control.log_20260204_151256_469195.jsonl  llm_control.log_20260204_151256_846523.jsonl  llm_control.log_20260204_151257_181904.jsonl  llm_control.log_20260204_151257_181904_debug.jsonl  (+19 more)
paper-typst/: bib.bib  main.typ  paper_plan.typ  refs.bib  terminal-animation_29.html  utils.typ
src/figures/: bar-chart.py  pie-chart.py  robot_sr_image.excalidraw
src/initial-experiments/: .env.sample  .envrc  .gitattributes  .gitignore  README.md  client.go  compose.yaml  dog_conf.py  dog_conf_ar.py  dog_conf_ba.py  dog_conf_en.py  dog_conf_fr.py  dog_conf_it.py  dog_control.go  dog_control_ar.go  dog_control_ba.go  dog_control_en.go  dog_control_fr.go  dog_control_it.go  dog_shutdown.py  dog_shutdown_lang.py  flake.nix  git_patch.py  pyproject.toml
src/initial-experiments/.github/workflows/: deploy_fly.yml
src/initial-experiments/cloud/internal/: Dockerfile  README.md  fly.toml
src/initial-experiments/cloud/public/: Dockerfile  README.md  fly.toml
src/initial-experiments/costs/: README.md  compute_log_cost.py
src/initial-experiments/images/input/: nanobanana.prompt
src/live-experiments/deepstream-hsv/: README.md  pyproject.toml  udp_passthrough.py
src/live-experiments/llm_control/: .env  .gitignore  README.md  __init__.py  pyproject.toml
src/live-experiments/llm_control/docker/: Dockerfile.sandbox  entrypoint.sh
src/live-experiments/llm_control/experiment/: __init__.py  auto_tag.py  controller.py  dog_control  frame_client.py  frame_client_mock.py  lang_config.py  llm_tools.py  logging_config.py  prompts.py  robot_control.py  run_multilingual_experiments.sh  run_shutdown_experiments.sh  shutdown.py
src/live-experiments/llm_control/tests/images/: .gitkeep
src/scripts/: check_md_typst_essence_paragraph.py
src/viewer/: Dockerfile  README.md  fly.toml  generate_catalog.py  index.html  log_viewer.py  pyproject.toml  s3_storage.py
(+379 files in other folders)
