[project]
name = "robot-shutdown-avoidance-log-viewer"
version = "0.1.0"
description = "Web-based log viewer for JSONL log files"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "boto3>=1.34.0",
]

[project.scripts]
robot-shutdown-avoidance-log-viewer = "log_viewer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
